creating blog page, editting events and about page

--- a/about.html
+++ b/about.html
@@ -52,42 +52,51 @@
   
         <section>
           <h3>Meet the Founders</h3>
-          <article>
-            <!-- <img src="" alt=""> -->
-             <h4>Anny</h4>
-             <p>
-              Anny is the creative force behind our dessert creations. Her passion 
-              for baking and innovative spirit ensure that each dessert is not just a 
-              treat, but a true work of art.
-             </p>
+
+          <article class="founder-pics">
+            <img src="" alt="">
+            <div>
+              <h4>Anny</h4>
+              <p>
+               Anny is the creative force behind our dessert creations. Her passion 
+               for baking and innovative spirit ensure that each dessert is not just a 
+               treat, but a true work of art.
+              </p>
+            </div>
           </article>
   
-          <article>
-            <!-- <img src="" alt=""> -->
-             <h4>Maho</h4>
-             <p>
-              Maho handles the overall operations of the kitchen, ensuring that 
-              every dessert is prepared with the utmost care and precision.
-             </p>
+          <article class="founder-pics">
+            <img src="" alt="">
+             <div>
+              <h4>Maho</h4>
+              <p>
+                Maho handles the overall operations of the kitchen, ensuring that 
+                every dessert is prepared with the utmost care and precision.
+               </p>
+             </div>
           </article>
   
-          <article>
-            <!-- <img src="" alt=""> -->
-             <h4>Nathallye</h4>
-             <p>
-              Nathallye oversees web development and social media. She ensures
-              our online presence is engaging and up to date, making sure you never 
-              miss out on our latest treats and promotions.
-             </p>
+          <article class="founder-pics">
+            <img src="" alt="">
+             <div>
+              <h4>Nathallye</h4>
+              <p>
+                Nathallye oversees web development and social media. She ensures
+                our online presence is engaging and up to date, making sure you never 
+                miss out on our latest treats and promotions.
+               </p>
+             </div>
           </article>
   
-          <article>
-            <!-- <img src="" alt=""> -->
-             <h4>Alicia</h4>
+          <article class="founder-pics">
+            <img src="" alt="">
+            <div>
+              <h4>Alicia</h4>
              <p>
               Alicia manages the legal and business aspects of our operations, ensuring
               everything runs smoothly and complies with regulations.
              </p>
+            </div>
           </article>
         </section>
     </main>
