--- a/events.html
+++ b/events.html
@@ -50,8 +50,9 @@
       <section>
         <h2>What We Offer</h2>
         
-        <h3>Customized Dessert Tables</h3>
-        <p>
+        <article>
+          <h3>Customized Dessert Tables</h3>
+          <p>
           Whether you’re hosting a wedding, corporate event, birthday party, or any 
           other gathering, our dessert tables can be tailored to fit the theme and style 
           of your event. Choose from a selection of our gourmet cakes, pastries, and 
@@ -61,33 +62,44 @@
           cleanup. We require a rectangular table with a cloth on it to be ready for setup. 
           Additionally, we provide donut walls, including our custom donut wall that can 
           hold up to 30 donuts.
-        </p>
+          </p>
+        </article>
+      
+        <article class="gallery">
+          <div class="gallery-items">
+            <img src="image/events/table1.jpg" alt="">
+            <img src="image/events/table2.jpg" alt="">
+            <img src="image/events/table3.JPG" alt="">
+            <img src="image/events/table4.JPG" alt="">
+            <img src="image/events/table5.JPG" alt="">
+            <img src="image/events/table6.JPG" alt="">
+            <img src="image/events/table7.JPG" alt="">
+            <img src="image/events/table8.JPG" alt="">
+          </div>
+        </article>
 
-        <h3>Deluxe Dessert Boxes</h3>
-        <p>
-          For a more personalized and portable dessert option, our deluxe dessert boxes 
-          are perfect. Each box is filled with a curated selection of our finest treats, including 
-          cakes, cookies, pastries, and other confections. These boxes can be customized to 
-          suit your event's theme and are a delightful way to thank your guests or provide a 
-          sweet takeaway. 
-        </p>
-        <p>
-          <strong>Features:</strong> Beautifully packaged boxes with a variety of desserts, customizable 
-          options to match your event theme, and convenient for guests to take home.
-        </p>
-      </section>
-
-      <section>
-        <h2>Image Gallery</h2>
-        <div>
-          <img src="" alt="">
-        </div>
-        <div>
-          <img src="" alt="">
-        </div>
-        <div>
-          <img src="" alt="">
-        </div>
+        <article class="dessert-box-container">
+          <h3>Deluxe Dessert Boxes</h3>
+          <div class="dessert-box-details">
+            <div>
+              <p>
+                For a more personalized and portable dessert option, our deluxe dessert boxes 
+                are perfect. Each box is filled with a curated selection of our finest treats, including 
+                cakes, cookies, pastries, and other confections. These boxes can be customized to 
+                suit your event's theme and are a delightful way to thank your guests or provide a 
+                sweet takeaway. 
+              </p>
+              <p>
+                <strong>Features:</strong> Beautifully packaged boxes with a variety of desserts, customizable 
+                options to match your event theme, and convenient for guests to take home.
+              </p>
+            </div>
+            <aside class="dessert-box-images">
+              <img src="image/events/box1.jpg" alt="">
+              <img src="image/events/box2.jpg" alt="">
+            </aside>
+          </div>
+        </article>
       </section>
 
       <section>
