--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="menu-items">
           <div class="menu-item" data-name="Chocolate Cake" data-price="40">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
+              src="image/home/cake/triplechocolate.jpeg"
               alt=""
             />
             <h3>Chocolate Cake</h3>
