--- a/blog.html
+++ b/blog.html
@@ -39,5 +39,68 @@
       </div>
     </header>
     
+    <main>
+      <section>
+        <h1>Upcoming Workshops</h1>
+
+        <article>
+          <h2>Cupcake Decorating Class: Fun for Kids and Adults</h2>
+          <p class="date">August 24, 2024</p>
+          <p>
+            Join us for a fun-filled cupcake decorating class that's perfect for both kids and adults! This
+            interactive event will teach participants how to decorate cupcakes with various frosting
+            techniques, sprinkles, and fun toppings. It's a fantastic way to spend quality time together while
+            learning new decorating skills. Each participant will decorate and take home their own set of
+            cupcakes. No prior experience is needed. Book your spot today and enjoy a creative day with
+            the family!
+          </p>
+        </article>
+
+        <article>
+          <h2>Drip Cake Decorating Workshop</h2>
+          <p class="date">August 28, 2024</p>
+          <p>
+            Join us for an exclusive workshop dedicated to the art of decorating a stunning drip cake! In this
+            hands-on session, we will guide you through the techniques needed to create a perfect drip
+            effect, from the chocolate ganache to the final touches. All materials will be provided, including
+            the cake, decorations, and tools. By the end of the workshop, you'll have a beautifully decorated
+            cake to take home and enjoy. Spaces are limited, so be sure to register early!
+          </p>
+        </article>
+      </section>
+
+      <section>
+        <h1>Promotions</h1>
+
+        <article>
+          <h2>Seasonal Treat Box</h2>
+          <p class="date">August 6, 2024 - August 25, 2024</p>
+          <div>
+            <p>
+              Discover the flavors of the season with our exclusive Seasonal Treat Box, available for pickup 
+              only! Enjoy a 20% discount on a box filled with a selection of our seasonal treats.
+            </p>
+            <p><strong>The box includes:</strong></p>
+            <ul>
+              <li>Strawberry Cupcakes</li>
+              <li>Arabian Baklava Rings (containing walnuts and pistachios)</li>
+              <li>Flutter Nutter Cookies (containing peanut butter)</li>
+              <li>Blueberry Cheesecake Cups</li>
+            </ul>
+            <p>
+              <strong>No modifications permitted with discount.</strong> Perfect for sampling a variety of our delicious
+              offerings, this promotion is designed to let you experience our seasonal treats at a fantastic
+              price. Simply place your order and visit our location to pick up your treat box(es) and use promo 
+              code <strong>TREAT20</strong> at checkout. Don't miss this chance to savor our seasonal 
+              specialties!
+            </p>
+          </div>
+        </article>
+      </section>
+
+      <section>
+        <!-- RECIPE WITH VIDEO -->
+      </section>
+    </main>
   </body>
 </html>
